[gd_scene load_steps=21 format=2]

[ext_resource path="res://maps/extras/height_map/height_map.tscn" type="PackedScene" id=1]
[ext_resource path="res://shaders/stylized_water/stylized_water_material.tres" type="Material" id=2]
[ext_resource path="res://maps/mountain_map.gd" type="Script" id=3]
[ext_resource path="res://assets/water-pour.ogg" type="AudioStream" id=4]
[ext_resource path="res://maps/extras/boundary.tscn" type="PackedScene" id=5]
[ext_resource path="res://default_env.tres" type="Environment" id=6]
[ext_resource path="res://entities/player/player.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/user_interface.tscn" type="PackedScene" id=8]
[ext_resource path="res://entities/enemy/blue_enemy/blue_enemy.tscn" type="PackedScene" id=9]
[ext_resource path="res://props/ball/ball.tscn" type="PackedScene" id=10]
[ext_resource path="res://props/red_button/red_button.tscn" type="PackedScene" id=11]
[ext_resource path="res://props/portal/portal.tscn" type="PackedScene" id=12]
[ext_resource path="res://maps/extras/height_map/Material.material" type="Material" id=13]
[ext_resource path="res://props/godot_head/godot_head.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/house_in_a_forest_loop.ogg" type="AudioStream" id=15]

[sub_resource type="Curve3D" id=1]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, 14.082, 0, -0.909996, 0, 0, 0, 0, 0, 0, -10.7957, -7.62939e-06, 27.546, 0, 0, 0, 0, 0, 0, -22.403, -7.62939e-06, 53.9595, 0, 0, 0, 0, 0, 0, -6.018, 0, 58.69, 0, 0, 0, 0, 0, 0, 9.18201, 0, 33.39, 0, 0, 0, 0, 0, 0, 26.182, 0, 16.19, 0, 0, 0, 0, 0, 0, 35.882, 0, 6.49, 0, 0, 0, 0, 0, 0, 14.082, 0, -0.909996 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="PlaneMesh" id=2]
material = ExtResource( 2 )
size = Vector2( 165, 165 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("WaterPlane:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 54.2274, -2.38324, 91.0514 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "drain_water"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("WaterPlane:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 54.2274, -2.38324, 91.0514 ), Vector3( 54.227, -8, 91.051 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="CylinderShape" id=5]
height = 5.0
radius = 5.0

[node name="MontainMap" type="Spatial"]
script = ExtResource( 3 )
map_music = ExtResource( 15 )
drain_water_sound = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 7 )]
transform = Transform( -0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, 57.6636, 2.1881, 39.8077 )

[node name="UserInterface" parent="." instance=ExtResource( 8 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 6 )

[node name="EnemySpawns" type="Spatial" parent="."]

[node name="BlueEnemyPath" type="Path" parent="EnemySpawns"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 96.018, 0, 77.11 )
curve = SubResource( 1 )

[node name="PathFollow" type="PathFollow" parent="EnemySpawns/BlueEnemyPath"]
transform = Transform( -0.956396, -2.107e-07, 0.292077, -3.42659e-07, 1, -4.00638e-07, -0.292077, -4.83251e-07, -0.956396, 14.082, 0, -0.909996 )

[node name="BlueEnemy" parent="EnemySpawns/BlueEnemyPath/PathFollow" instance=ExtResource( 9 )]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0 )

[node name="Props" type="Spatial" parent="."]

[node name="Ball" parent="Props" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 174.437, 29.7845, 75.7972 )

[node name="RedButton" parent="Props" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 73.5938, -3.34139, 74.8626 )

[node name="HeightMap" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 66.935, 9.89507, 94.6744 )

[node name="WaterPlane" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 54.2274, -2.38324, 91.0514 )
mesh = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/drain_water = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sound"

[node name="RetryCamera" type="Camera" parent="."]
transform = Transform( -0.707107, 0.0568076, -0.704821, 0, 0.996768, 0.0803381, 0.707107, 0.0568076, -0.704821, 8.32897, 44.3172, 8.32897 )
far = 200.0

[node name="Boundary" parent="." instance=ExtResource( 5 )]
transform = Transform( 15, 0, 0, 0, -0.2, -2.26494e-06, 0, 3.01992e-08, -15, 65, -60, 91 )

[node name="CSGCylinder" type="CSGCylinder" parent="."]
transform = Transform( -0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, -0.5, 55.2639, 3.8, 21.8429 )
radius = 5.0
height = 5.0
material = ExtResource( 13 )

[node name="ExitPortal" parent="CSGCylinder" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.52588e-05, 2.6, -0.00272751 )
label = "Exit"
map_name = "hub_1"

[node name="StaticBody" type="StaticBody" parent="CSGCylinder"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="CSGCylinder/StaticBody"]
shape = SubResource( 5 )

[node name="GodotHead" parent="." instance=ExtResource( 14 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -43, 33.6, 116.8 )

[node name="GodotHead2" parent="." instance=ExtResource( 14 )]
transform = Transform( 0.984808, 0, -0.173648, 0, 1, 0, 0.173648, 0, 0.984808, 179.809, 33.6, 68.9833 )

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="pressed" from="Props/RedButton" to="." method="_on_RedButton_pressed"]
